--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
             "role": "maintainer"
         }
     ],
+    "minimum-stability": "dev",
     "require": { },
     "autoload": {
         "classmap": ["src/"]
